--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "Backend para gestión de alquiler de canchas sintéticas",
     "type": "project",
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
+        "firebase/php-jwt": "^6.9",
+        "symfony/yaml": "^7.3",
         "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
@@ -30,4 +32,3 @@
     "minimum-stability": "dev",
     "prefer-stable": true
 }
-
