--- a/env.example
+++ b/env.example
@@ -8,3 +8,14 @@ DB_PASS=
 APP_ENV=local
 BASE_URL=http://localhost:8000
 
+# JWT Secret (generar una clave segura)
+JWT_SECRET=your-secret-key-change-this-in-production
+
+# CORS
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_WINDOW=3600
+
